--- a/404.md
+++ b/404.md
@@ -5,5 +5,6 @@ permalink: /404.html
 ---
 	
 Sorry, we can't find that page that you're looking for.<br />
-You can try again by going [back to the homepage]({{ site.baseurl }}/).
+<br />
+[Give up.]({{ site.baseurl }}/).
 
