--- a/404.md
+++ b/404.md
@@ -6,5 +6,5 @@ permalink: /404.html
 	
 Sorry, we can't find that page that you're looking for.<br />
 <br />
-[Give up.]({{ site.baseurl }}/).
+[Give up]({{ site.baseurl }}/).
 
